--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <button id="popup">Grid Size</button>
+    <p id="message"></p>
     <div class="board"></div>
     <script src="script.js"></script>
 </body>
